--- a/courses/index.html
+++ b/courses/index.html
@@ -451,9 +451,12 @@
 
 
 <h1 id="_1">我上过的课程</h1>
-<p>这里记录了所有我通过教务系统 <strong>选课</strong> 并获得学分的课程。</p>
-<p>本块内容更侧重于介绍课程内容和给出多快好省的学习课程，获得更高绩点的建议，若要寻求选课策略（这对课程学习常常有重要的影响），请参阅<a href="">选课指南</a>。</p>
+<p>这里记录了所有我通过教务系统 <strong>选课</strong> 并获得学分的课程。这些课程按照教务网分类方式进行分类，并给出了课程代码。</p>
 <p>由于本人几乎没有专门记笔记的习惯，常常在复习的时候上98薅笔记，所以对于提到的非原创的内容会给出相应链接，请自行访问获取。</p>
+<div class="admonition note">
+<p class="admonition-title">Note</p>
+<p>本块内容更侧重于介绍课程内容和给出多快好省的学习课程获得更高成绩的建议，若要寻求选课策略（这对课程学习常常有重要的影响），请参阅<a href="">选课指南</a>。</p>
+</div>
 
 
 
