--- a/courses/innovation_entrepreneurship_courses/index.html
+++ b/courses/innovation_entrepreneurship_courses/index.html
@@ -516,12 +516,12 @@
                   
 
 
-<h1 id="_1">创新创业类</h1>
+<h1 id="_1">创新创业类课程</h1>
 <p>没啥用的一类抽象课，毕竟上课的老师既没创新过也没创业过，大家选了都是为了凑学分。</p>
-<h2 id="361p0040">（361P0040）职业生涯规划</h2>
+<h3 id="361p0040">（361P0040）职业生涯规划</h3>
 <ul>
 <li>在创新创业类的一系列抽象课程中较为正常的一门。
-作为1.5分短学期课事超级超级超级多，具体多到什么程度和老师有关，但总体来说包括生涯人物访谈（一般要交报告），职业生涯规划书（不多于5000字），个人简历撰写，参加招聘会，课上小游戏（个人感觉社恐不友好，且使你不能安心划水），课后小组讨论（并需要撰写一本小册子，期末上交），期末小组展示（在教务网期末考试时间）等。强烈建议在秋/春学期上以免使得自己失去生涯。</li>
+作为1.5分短学期课事 <strong>超级超级超级多</strong> ，具体多到什么程度和老师有关，但总体来说包括生涯人物访谈（一般要交报告），职业生涯规划书（不多于5000字），个人简历撰写，参加招聘会，课上小游戏（个人感觉社恐不友好，且使你不能安心划水），课后小组讨论（并需要撰写一本小册子，期末上交），期末小组展示（在教务网期末考试时间）等。强烈建议在秋/春学期上以免使得自己失去生涯。</li>
 <li>课程本身没啥好说的，反正也没几个人听，就正常完成各项任务就行。有熟人愿意的的话可以找他要职规书照着改（因为职规书涉及到个人细节很多，大家可能不太愿意分享）。</li>
 </ul>
 
