--- a/courses/natural_science_courses/index.html
+++ b/courses/natural_science_courses/index.html
@@ -608,7 +608,7 @@
 
 <h1 id="_1">自然科学通识课程</h1>
 <p>工科学生在大一以及大二上所学习的最主要的一些课程。这些课程往往学分高、工作量大。并常常对后续课程学习有重要的影响。对于转专业的同学来说更是重中之重。</p>
-<h2 id="821t0150821t0160iii">（821T0150/821T0160）微积分（甲）Ⅰ/Ⅱ</h2>
+<h3 id="821t0150821t0160iii">（821T0150/821T0160）微积分（甲）Ⅰ/Ⅱ</h3>
 <ul>
 <li>考核方式：20%平时（考勤/mooc/作业）+2*10%小测+20%期中+40%期末**</li>
 <li>平常学习的考勤和作业肯定是要解决的，作业哪怕抄也要交上去，签到没到可以下课找老师补签（一下课就找，之后再找就过于荒谬了）。
@@ -620,7 +620,7 @@
   校内还有许多人刷吉米多维奇，个人认为如果觉得题不够也可以买，不过这本书只管到微甲Ⅱ的期中前（但应该覆盖了微乙的全部内容）。
   另外推荐公众号“路老师的 nonsense collection”，上面有sdk/lxj版课本课后题解答和历年卷电子版及其解答。</li>
 </ul>
-<h2 id="821t0190">（821T0190）线性代数（甲）</h2>
+<h3 id="821t0190">（821T0190）线性代数（甲）</h3>
 <ul>
 <li>考核方式：20%平时（ <strong>5%mooc</strong> /考勤/作业）+2*10%小测+20%期中+40%期末</li>
 <li>对大多数人来说最麻烦的自然科学通识课程，由于各种原因内容极其抽象难懂。</li>
@@ -629,7 +629,7 @@
 <li>这门课的小测监管很严格，不要有侥幸心理。</li>
 <li>历年卷还是要刷的，很多题型每年反复考。期中考试会比较麻烦，因为会涉及到较多的证明题（好消息是23级开始的线代课程已经取消了期中考）。期末考试反而不必太担心，因为多数题还是各种计算（6道计算2道证明）。这门课建议放弃没布置的课后题，因为没答案，一道一道查太麻烦了，把老师布置的（助教会发答案）弄懂就行。另外，某些知识点藏在课后题中，需要注意。</li>
 </ul>
-<h2 id="761t0030761t0040iii">（761T0030/761T0040）大学物理（乙）Ⅰ/Ⅱ</h2>
+<h3 id="761t0030761t0040iii">（761T0030/761T0040）大学物理（乙）Ⅰ/Ⅱ</h3>
 <ul>
 <li>考核方式：40%平时（按4次小测和签到作业情况进行 <strong>线性赋分</strong>，大物Ⅱ有另外的竞赛加分）+25%期中+35%期末</li>
 <li>大物最为抽象的就是平时分班内按排名线性赋分，如果你在强的班级会非常难受。
@@ -643,17 +643,17 @@
 <li>在此推荐<a href="https://savia7582.github.io/Exterior/%E7%89%A9%E7%90%86%E4%B8%8E%E5%B7%A5%E7%A8%8B/">Savia学长的笔记</a>，可结合此笔记进行学习 <del>背公式</del> 。
 平时作业也可以参考<a href="https://github.com/QSCTech/zju-icicles/tree/master/%E5%A4%A7%E5%AD%A6%E7%89%A9%E7%90%86/%E7%AD%94%E6%A1%88">这个github链接</a>，这是大物乙课后题的答案</li>
 </ul>
-<h2 id="761t0060">（761T0060）大学物理实验</h2>
+<h3 id="761t0060">（761T0060）大学物理实验</h3>
 <ul>
 <li>考核方式：70%实验报告分（十四次实验取平均）+30%期末</li>
-<li>非常恶心的课程，它的恶心之处不仅在于手写实验报告，还在于期末考试非常难，会让你平常写实验报告的努力都白费。</li>
+<li>非常恶心的课程，它的恶心之处不仅在于手写实验报告（但同时又鼓励使用电脑处理数据并打印），还在于期末考试非常难，会让你平常写实验报告的努力都白费。</li>
 <li>实验选择方面，因为必选两个光学实验（除了光学测量外的光学实验都费眼睛且设备难调），建议选光速测量+别的一个实验；电学实验都不错，除了密立根油滴实验（常常找不到合适的油滴）；力学试验基本无功无过。
 此外还需要注意几个老师，已知风评不佳的有pry，zhj，zjh。</li>
 <li>做实验过程中注意老师提到的数据处理要求，有的老师专门布置了思考题也需要关注。</li>
 <li>实验报告大家都是抄的，推荐<a href="https://xuan-insr.github.io/other_courses/big_physics_exp/">咸鱼暄的实验报告</a>，某包，sloffed公众号上的实验报告。</li>
 <li>为应付期末考试（考绪论和两个必做实验），建议把必做实验排在最后两周做，同时可以拍个实验器材实物图便于复习，复习时要求 <strong>背诵</strong> 课本上三块考试内容。此外，有非常好的<a href="https://www.cc98.org/topic/5802063">历年卷汇总</a></li>
 </ul>
-<h2 id="771t0050">（771T0050）工程化学</h2>
+<h3 id="771t0050">（771T0050）工程化学</h3>
 <ul>
 <li>考核方式：40%平时（3次小测/考勤/作业）+60%期末考试（允许带一张A4纸）</li>
 <li>这课高中学化学了就很轻松，毕竟大多数是高中化学的延拓，还半开卷（比隔壁考前死背公式的普化乙赢太多了）。老师布置的课后题弄懂做好完全没问题。
@@ -661,7 +661,7 @@
 <li>考试用的A4纸上可以抄很多东西，如果乐于微雕，你甚至可以抄一张元素周期表上去。</li>
 <li>更多复习细节指路<a href="https://www.cc98.org/topic/5595371">我自己写的98帖子</a></li>
 </ul>
-<h2 id="771t0110">（771T0110）工程化学实验</h2>
+<h3 id="771t0110">（771T0110）工程化学实验</h3>
 <ul>
 <li>考核方式：4次实验报告取平均分</li>
 <li>没什么压力的课程，没有期末考试，也只有0.5学分。
