--- a/courses/natural_science_courses/index.html
+++ b/courses/natural_science_courses/index.html
@@ -638,6 +638,10 @@
 
 <h1 id="_1">自然科学通识课程</h1>
 <p>工科学生在大一以及大二上所学习的最主要的一些课程。这些课程往往学分高、工作量大。并常常对后续课程学习有重要的影响。对于转专业的同学来说更是重中之重。</p>
+<details class="tip" open="open">
+<summary>Tip</summary>
+<p>这些课程都有详尽的历年卷资源，且考前针对性的刷历年卷对获得高分 <strong>非常有帮助</strong> 。</p>
+</details>
 <h3 id="821t0150821t0160iii">（821T0150/821T0160）微积分（甲）Ⅰ/Ⅱ</h3>
 <ul>
 <li>考核方式：20%平时（考勤/mooc/作业）+2*10%小测+20%期中+40%期末**</li>
@@ -646,7 +650,7 @@
 另外，期中考试往往比较简单，务必高分（90+）拿下，给期末留出容错。</li>
 <li>微积分的学习方式和高中数学有极大的相似性，差不多就是刷题/刷历年卷。
   课后题除了布置的作业之外，可以把没布置的题也做一做（对于sdk版的课本，书店有课后题答案，可以买一本）。
-  课程历年卷自然也是 <strong>绝对重要</strong> 的，可以在文印店买到，或是在<a href="https://www.cc98.org/topic/5590587">这个cc98链接</a>获取（缺最近几套卷子的）电子版打印。
+  课程历年卷自然也是 <strong>绝对重要</strong> 的，可以在文印店买到，或是在<a href="https://www.cc98.org/topic/5590587">这个cc98链接</a>获取（缺最近几套卷子的）电子版用于打印。
   校内还有许多人刷吉米多维奇，个人认为如果觉得题不够也可以买，不过这本书只管到微甲Ⅱ的期中前（但应该覆盖了微乙的全部内容）。
   另外推荐公众号“路老师的 nonsense collection”，上面有sdk/lxj版课本课后题解答和历年卷电子版及其解答。</li>
 </ul>
@@ -668,17 +672,22 @@
 而对于能源工程学院学生，大物Ⅰ热学部分是后续《工程热力学》课程学习的基础，非常重要。</li>
 <li>大物课程考的广但不难 <del>纯纯套公式</del> ，因此考试可以配合历年卷速成，历年卷每学期教研室会卖，直接买就行。由于大物甲乙卷子基本可以混做（甲会多一些无关紧要的内容），因此每次考试就有十套卷子可以拿来刷。
 此外，期末考试对于期中考试前学习的内容考察较少，在期末时间紧迫时可以考虑放弃。但是，由于考试难度不大，大物改卷较为严格 <del>（考试时感觉满分，出分八十多蛮正常）</del> ，在考试时务必仔细检查。</li>
-<li>秋冬学期会有学校组织的大物竞赛，主要内容好像考电磁学多一点，参加了可以有加分，获奖加的更多，加到线性赋分后的平时分40%里且不溢出。</li>
 <li>与一般课程不同，如果你在大物期中考试不慎取得了较差的成绩，可以考虑弃修（由于上一条，可能你只是倒霉）， <strong>当然这需要慎重考虑后续课程安排再做决定</strong> 。</li>
+<li>秋冬学期会有学校组织的大物竞赛，主要内容好像考电磁学多一点，参加了可以有加分，获奖加的更多，加到线性赋分后的平时分里且不溢出。</li>
 <li>在此推荐<a href="https://savia7582.github.io/Exterior/%E7%89%A9%E7%90%86%E4%B8%8E%E5%B7%A5%E7%A8%8B/">Savia学长的笔记</a>，可结合此笔记进行学习 <del>背公式</del> 。
-平时作业也可以参考<a href="https://github.com/QSCTech/zju-icicles/tree/master/%E5%A4%A7%E5%AD%A6%E7%89%A9%E7%90%86/%E7%AD%94%E6%A1%88">这个github链接</a>，这是大物乙课后题的答案</li>
+平时作业也可以参考<a href="https://github.com/QSCTech/zju-icicles/tree/master/%E5%A4%A7%E5%AD%A6%E7%89%A9%E7%90%86/%E7%AD%94%E6%A1%88">这个github链接</a>，这是大物乙课后题的答案。</li>
 </ul>
 <h3 id="761t0060">（761T0060）大学物理实验</h3>
 <ul>
 <li>考核方式：70%实验报告分（十四次实验取平均）+30%期末</li>
 <li>非常恶心的课程，它的恶心之处不仅在于手写实验报告（但同时又鼓励使用电脑处理数据并打印），还在于期末考试非常难，会让你平常写实验报告的努力都白费。</li>
-<li>实验选择方面，因为必选两个光学实验（除了光学测量外的光学实验都费眼睛且设备难调），建议选光速测量+别的一个实验；电学实验都不错，除了密立根油滴实验（常常找不到合适的油滴）；力学试验基本无功无过。
-此外还需要注意几个老师，已知风评不佳的有pry，zhj，zjh。</li>
+<li>实验选择方面，一共要在约二十个实验里选做十四个实验，有两个必做实验，且必选两个光学实验。<ul>
+<li>除了光学测量外的光学实验都费眼睛且设备难调，建议选光速测量+别的一个实验</li>
+<li>电学实验都不错，除了密立根油滴实验（常常找不到合适的油滴）</li>
+<li>力学试验基本无功无过。</li>
+</ul>
+</li>
+<li>此外还需要注意几个老师，已知风评不佳的有pry，zhj，zjh。</li>
 <li>做实验过程中注意老师提到的数据处理要求，有的老师专门布置了思考题也需要关注。</li>
 <li>实验报告大家都是抄的，推荐<a href="https://xuan-insr.github.io/other_courses/big_physics_exp/">咸鱼暄的实验报告</a>，某包，sloffed公众号上的实验报告。</li>
 <li>为应付期末考试（考绪论和两个必做实验），建议把必做实验排在最后两周做，同时可以拍个实验器材实物图便于复习，复习时要求 <strong>背诵</strong> 课本上三块考试内容。此外，有非常好的<a href="https://www.cc98.org/topic/5802063">历年卷汇总</a></li>
