--- a/courses/political_courses/index.html
+++ b/courses/political_courses/index.html
@@ -709,11 +709,15 @@
 
 
 <h1 id="_1">思政/军体类课程</h1>
-<p>通常所说的政治课/思政课。主要特点是老师的选择和最终得分强相关，以及格外重视签到（毕竟这类课不签到可能根本没人来）</p>
-<div class="admonition note">
-<p class="admonition-title">Note</p>
+<p>通常所说的政治课/思政课。主要特点是老师的选择和最终得分强相关，以及格外重视签到（毕竟这类课不签到可能根本没人来）。这些课程的历年卷均可以在98版搜获取，每年都有人回忆。</p>
+<details class="note" open="open">
+<summary>Note</summary>
 <p>本页的军体类课程不包括体育课程，若要查询体育课程相关介绍，请参阅<a href="">体育课程</a>。</p>
-</div>
+</details>
+<details class="warning" open="open">
+<summary>Warning</summary>
+<p>各老师的平时任务安排可能不同，请以老师第一节课的介绍为准。</p>
+</details>
 <h3 id="03110021">（03110021）军训</h3>
 <ul>
 <li>考核方式：各连队老师根据评分细则打分。</li>
@@ -725,9 +729,39 @@
 <li>更多生活上的细节可以在98版搜或者直接发帖提问。</li>
 </ul>
 <h3 id="031e0011">（031E0011）军事理论</h3>
+<ul>
+<li>考核方式：60%平时（论文/考勤）+40%期末（开卷）</li>
+<li>这门课的开卷考试算是比较难的，因为题目数量很多，而且在课本上并不是那么好找。<ul>
+<li>除了课本本身之外，还需要打印老师课上发的《习近平强军思想》。另外还有这些资料值得带进考场：<a href="https://file.cc98.org/v2-upload/2023-01-10/hdx02y4m.pdf">课本内容页码对照(cc98链接)</a>、<a href="https://file.cc98.org/v2-upload/2023-01-10/ki3rqpzm.pdf">毛泽东军事思想总结(cc98链接)</a>、<a href="https://www.cc98.org/topic/5642376">导弹类内容整理(cc98链接)</a>。</li>
+<li>其他的题库例题啥的可能也有用（甚至有很小的可能有原题），但是考试的时候太多了也翻不完，个人感觉没必要带，ppt则是完全没必要打印，厚且信息密度低。</li>
+</ul>
+</li>
+</ul>
 <h3 id="371e0010i">（371E0010）形势与政策Ⅰ</h3>
+<ul>
+<li>考核方式：平时课后作业+期末 <strong>（闭卷）</strong></li>
+<li>课上主要是讲一些时事（助教讲）和政策（老师讲），课后不发ppt，期末考前会发两个一共两百多页的复习用ppt。</li>
+<li>这门课没法在选课系统里换老师，全凭天意。</li>
+<li>这门课横跨两个学期且（不严格的）按单双周在周日晚上上课，别忘记上课。</li>
+<li>虽然是闭卷考试，但完全没必要复习，因为基本背不下来，给分全靠老师良心。不过有必要背一下浙大校训浙大精神啥的，好像每年考。</li>
+</ul>
 <h3 id="551e0020">（551E0020）中国近现代史纲要</h3>
+<ul>
+<li>考核方式：点名发言小测15%+电影观后感15%+读书报告20%+小组展示20%+30%期末（开卷，只能带教材和手写笔记）</li>
+<li>22级的期末考试（由于疫情线上）是四道大题，而正常的考试是20道多选+3道大题。<ul>
+<li>大题只需要平均分配时长，找到题目对应章节，简要的概括，抄到章节结束或到预定时间就下一道。</li>
+<li>选择题的话，如果复习时间宽裕可以熟悉一下课本。</li>
+</ul>
+</li>
+</ul>
 <h3 id="551e0070">（551E0070）思想道德与法治</h3>
+<ul>
+<li>考核方式：研究性学习（课题研究，需要小组展示和形成研究报告）25%+志愿活动（小组一起完成，需要提交汇报ppt）10%+读书报告10%+现场教学5%+课堂表现20%+期末30%</li>
+<li>期末考试是开卷，六道大题选四道作答。 <strong>完全不用复习，一个字都不用看</strong> ，到时候先看看哪四道题有感觉，照着抄就行。<ul>
+<li>有一个细节是也许可以看看当年考研或是往年考研政治的思修部分考题，把答案打印出来带进去，有老师偷懒的话，出题会直接放原题。</li>
+</ul>
+</li>
+</ul>
 <h3 id="011e0010">（011E0010）中国改革开放史</h3>
 <ul>
 <li>考核方式：思考题（每次课ppt后有几道，要求在所有题中选取四道作答，每题500-1000字）40%+期末论文（和课程内容有关，不少于1500字）60%</li>
@@ -736,6 +770,14 @@
 <li>但是这门课给分极其玄妙。方差大且平均来看比别的四史低。有满的，也有二点几的。卷字数有用但不大，（自己认为的）认真写和纯复制拼接都有拿高分或拿低分的案例。大概老师有一套自己的判断标准的，但不知道是啥。</li>
 </ul>
 <h3 id="551e0100">（551E0100）马克思主义基本原理</h3>
+<ul>
+<li>考核方式：读书报告（1000-3000字）15%+小组展示15%+小测10%+课堂表现5%+50%期末 <strong>（闭卷）</strong></li>
+<li>期末考试比较麻烦，因为是闭卷，有3道大题（马哲辩证唯物主义，马哲历史唯物主义，马政经）。而且课程内容比高中的多一些，因此最好是能抽时间背，可以买一本肖秀荣背诵手册，背手册里的前两部分。<ul>
+<li>选择题四十道，基本有三十道都是马哲，七八道马政经，两三道科社。选择题大多数靠肖秀荣背诵手册里的重点提示就能解决，会考一些史实（哪本书是马恩第一本合写的著作？），课本上都有。科社部分不必专门复习，有空的话可以浏览一下手册这部分。</li>
+<li>大题背手册或者是背课本小节的标题，再结合材料就行。</li>
+</ul>
+</li>
+</ul>
 <h3 id="551e0110">（551E0110）习近平新时代中国特色社会主义思想概论</h3>
 <ul>
 <li>还没上</li>
@@ -745,6 +787,9 @@
 <li>还没上</li>
 </ul>
 <h3 id="371e0020ii">（371E0020）形势与政策Ⅱ</h3>
+<ul>
+<li>二级制课程，学院会公布算形策Ⅱ分数的活动，参加足够次数即可通过。学生不需自行选课，会在大四自动导入。</li>
+</ul>
 
 
 
