--- a/friend/index.html
+++ b/friend/index.html
@@ -467,12 +467,30 @@
       <div class="links-content">
          <div class="link-navigation">
             <div class="card">
-               <img class="ava" src="https://i.loli.net/2020/05/14/5VyHPQqR6LWF39a.png" />
+               <img class="ava" src="../img/mem.png" />
                <div class="card-header">
                   <div>
-                     <a href="https://twitter.com/" target=“_blank”>Twitter</a>
+                     <a href="https://mem.ac/" target=“_blank”>mem的小站</a>
                   </div>
-                  <div class="info">社交分享平台</div>
+                  <div class="info">还是ACM大佬</div>
+               </div>
+            </div>
+            <div class="card">
+               <img class="ava" src="../img/jjp.jpg" />
+               <div class="card-header">
+                  <div>
+                     <a href="https://note.jiepeng.tech" target=“_blank”>mem的小站</a>
+                  </div>
+                  <div class="info">混合工高双料特工</div>
+               </div>
+            </div>
+            <div class="card">
+               <img class="ava" src="../img/xyx.jpg" />
+               <div class="card-header">
+                  <div>
+                     <a href="https://xuan-insr.github.io/" target=“_blank”>咸鱼暄的代码空间</a>
+                  </div>
+                  <div class="info">是大暄</div>
                </div>
             </div>
       </div>
