--- a/courses/innovation_entrepreneurship_courses/index.html
+++ b/courses/innovation_entrepreneurship_courses/index.html
@@ -547,12 +547,17 @@
 
 
 <h1 id="_1">创新创业类课程</h1>
-<p>没啥用的一类抽象课，毕竟上课的老师既没创新过也没创业过，大家选了都是为了凑学分。</p>
+<p>基本没啥用的一类抽象课，毕竟上课的老师既没创新过也没创业过，大家选了都是为了凑学分。</p>
+<details class="warning" open="open">
+<summary>Warning</summary>
+<p>各老师的平时任务安排可能不同，请以老师第一节课的介绍为准。</p>
+</details>
 <h3 id="361p0040">（361P0040）职业生涯规划</h3>
 <ul>
+<li>考核方式：到课10%+课堂表现10%+生涯人物访谈（需提交800字报告）10%+个人简历制作10%+小组互评10%+职规书20%+课外体验（参加线上一对一咨询体验/参加招聘会提交照片/完成实习上交实习报告）10%+小组展示20%</li>
 <li>在创新创业类的一系列抽象课程中较为正常的一门。
-作为1.5分短学期课事 <strong>超级超级超级多</strong> ，具体多到什么程度和老师有关，但总体来说包括生涯人物访谈（一般要交报告），职业生涯规划书（不多于5000字），个人简历撰写，参加招聘会，课上小游戏（个人感觉社恐不友好，且使你不能安心划水），课后小组讨论（并需要撰写一本小册子，期末上交），期末小组展示（在教务网期末考试时间）等。强烈建议在秋/春学期上以免使得自己失去生涯。</li>
-<li>课程本身没啥好说的，反正也没几个人听，就正常完成各项任务就行。有熟人愿意的的话可以找他要职规书照着改（因为职规书涉及到个人细节很多，大家可能不太愿意分享）。</li>
+作为1.5分短学期课事 <strong>超级超级超级多</strong> ，具体多到什么程度和老师有关，但总体来说包括生涯人物访谈，职业生涯规划书（不多于5000字），个人简历撰写，参加招聘会，课上小游戏（个人感觉社恐不友好，且使你不能安心划水），课后小组讨论（并需要撰写一本小册子，期末上交），期末小组展示（在教务网期末考试时间）等。强烈建议在秋/春学期上以免使得自己失去生涯。</li>
+<li>课程本身没啥好说的，不能说完全没帮助，但确实帮助不大，正常完成各项任务就行。有熟人愿意的的话可以找他要职规书照着改（因为职规书涉及到个人细节很多，大家可能不太愿意分享）。</li>
 </ul>
 
 
