--- a/friend/index.html
+++ b/friend/index.html
@@ -479,7 +479,7 @@
                <img class="ava" src="../img/jjp.jpg" />
                <div class="card-header">
                   <div>
-                     <a href="https://note.jiepeng.tech" target=“_blank”>mem的小站</a>
+                     <a href="https://note.jiepeng.tech" target=“_blank”>jp小趴菜</a>
                   </div>
                   <div class="info">混合工高双料特工</div>
                </div>
