--- a/friend/index.html
+++ b/friend/index.html
@@ -481,7 +481,7 @@
                   <div>
                      <a href="https://note.jiepeng.tech" target=“_blank”>jp小趴菜</a>
                   </div>
-                  <div class="info">混合工高双料特工</div>
+                  <div class="info">是混合工高双料特工</div>
                </div>
             </div>
             <div class="card">
@@ -493,8 +493,27 @@
                   <div class="info">是大暄</div>
                </div>
             </div>
+            <div class="card">
+               <img class="ava" src="../img/hua0.jpg" />
+               <div class="card-header">
+                  <div>
+                     <a href="https://hzeroyuke.github.io/my_blog/" target=“_blank”>华零的blog</a>
+                  </div>
+                  <div class="info">是可爱❀0</div>
+               </div>
+            </div>
+            <div class="card">
+               <img class="ava" src="../img/fufu.jpg" />
+               <div class="card-header">
+                  <div>
+                     <a href="https://csfufu.life" target=“_blank”>fufu酱のNoteBook</a>
+                  </div>
+                  <div class="info">是厉害的fufu</div>
+               </div>
+            </div>
       </div>
    </div>
+</div>
 </div>
 
 
