--- a/friend/index.html
+++ b/friend/index.html
@@ -511,6 +511,15 @@
                   <div class="info">是厉害的fufu</div>
                </div>
             </div>
+            <div class="card">
+               <img class="ava" src="../img/yechen.jpg" />
+               <div class="card-header">
+                  <div>
+                     <a href="https://blog.night1918.top/" target=“_blank”>Night1918 Blog</a>
+                  </div>
+                  <div class="info">是夜辰</div>
+               </div>
+            </div>
       </div>
    </div>
 </div>
