--- a/courses/political_courses/index.html
+++ b/courses/political_courses/index.html
@@ -963,11 +963,11 @@
 </ul>
 <h3 id="551e0110">（551E0110）习近平新时代中国特色社会主义思想概论</h3>
 <ul>
-<li>还没上</li>
+<li>正在上</li>
 </ul>
 <h3 id="551e0120">（551E0120）毛泽东思想和中国特色社会主义理论体系概论</h3>
 <ul>
-<li>还没上</li>
+<li>正在上</li>
 </ul>
 <h3 id="371e0020ii">（371E0020）形势与政策Ⅱ</h3>
 <ul>
