--- a/friend/index.html
+++ b/friend/index.html
@@ -500,6 +500,24 @@
                   <div class="info">是sol佬写的打牌网站</div>
                </div>
             </div>
+            <div class="card">
+               <img class="ava" src="../img/mjh.jpg" />
+               <div class="card-header">
+                  <div>
+                     <a href="https://ottohere-mourn.github.io/" target=“_blank”>毛毛的垃圾网站</a>
+                  </div>
+                  <div class="info">啥都没有只有付款码</div>
+               </div>
+            </div>
+            <div class="card">
+               <img class="ava" src="../img/atri.jpg" />
+               <div class="card-header">
+                  <div>
+                     <a href="https://zjuatri.cn" target=“_blank”>机器人的微积分学习网站</a>
+                  </div>
+                  <div class="info">atri的网站</div>
+               </div>
+            </div>
       </div>
    </div>
 </div>
