--- a/courses/physical_education_courses/index.html
+++ b/courses/physical_education_courses/index.html
@@ -911,7 +911,8 @@
 <p>平常说的体育课选课也就是选专项技能课，下面简单介绍我上过的几门专项技能课
 + 无线电测向：主要内容是通过测向机听电台判断方位，找到电台之后用打卡器进行打卡。考试分为两部分，第一部分是听台考试，即听到电台里的信息（数字和电台声音有个对照表）并记录，第二部分是实际考试，共进行3次，每次在所有参加考试的同学内按照成绩排名赋分，取最高的两次给分。由于布台范围比定向越野小，还算轻松不需要到处跑，不过也需要周末去华家池、玉泉考试。但是由于电台信号范围不大，因此考试很有随机性，可能某个电台不靠近根本听不到，由于是好几个班一起考的建议在人多的时候去考试，这样看哪里簇拥着一群人就是有打卡点。也可以当布台志愿者，不需要参加考试，只需负责帮同学记录成绩，且得分不错。
 + 羽毛球（初级班）：羽毛球很好玩，考试很难。考核是发高远球，符合规则不出界不发错位的情况下按落地点给分，一共发十个，每个球满分10分。考核比较考验发挥，因为一个球出界10分（即总评4分）就没了。有一次统一的期末考，之后还有课内的补考，有的老师会在课内补考捞一捞人。
-+ 太极拳：上课就是学打一套拳（24式简化太极拳），个人感觉课程比较无聊。考核是和学院同学组队参加三好杯比赛打一套拳，小组得分（10分制）*4即为专项分，若同时参加太极扇比赛项目则专项分最低给36分，同时可通过参加辅导站，提交视频等方式加专项分，全部参加的话专项分基本可以给满。</p>
++ 太极拳：上课就是学打一套拳（24式简化太极拳），个人感觉课程比较无聊。考核是和学院同学组队参加三好杯比赛打一套拳，小组得分（10分制）*4即为专项分，若同时参加太极扇比赛项目则专项分最低给36分，同时可通过参加辅导站，提交视频等方式加专项分，全部参加的话专项分基本可以给满。
++ 舞龙舞狮：这门课开课老师只有姜凯老师，老师人很好但也很严格，你上课划水他会严厉批评你。大概是课程的专项动作内容比较少，前几节课都会抽时间练身体素质。专项课的内容主要是舞龙，36个人分成三条九人龙和一条五人龙，其中五人龙学习的的动作和十人龙略有不同，且由于人数较少，后期一起排练比赛内容的时候可能会方便些。一条龙有两个特殊的位置：龙头和龙珠。龙珠在节目中可以任意走动，因此一般成为台上的焦点，老师常常选择女生担任，龙头需要举较重的龙头，而且决定着整组动作质量，老师常常挑选较为健壮的男生担任。最后考试为参加传统民俗运动会，可以一条龙或多条龙自行组织编写剧本和配乐，最后比赛得分即为专项得分，另外老师会让各组自行讨论两位同学给予专项分满分，一般其中一个名额会给龙头。</p>
 <h2 id="10">10%专项课考勤</h2>
 <p>按规定，老师在系统内进行记录，记录为缺勤/早退-2分，记录为请假-1分（如果到场见习不扣分，有的老师请假会在系统内记录为正常到课，也不扣分）。请假两次算一次缺勤，缺勤三次则体育课总分 <strong>直接记为59分（挂科）</strong> 。</p>
 <h2 id="0">0%身体素质课考勤</h2>
@@ -923,7 +924,7 @@
 <p>另外，大一第一学期的课程统一不进行理论考，需要刷智慧树网课完成。</p>
 <h2 id="0_1">0%竞赛赋分</h2>
 <p>参与体育比赛（三好杯/趣味运动会等）可额外+2分</p>
-<p>总分由上述成绩加总（每项成绩可能出现两位小数），四舍五入到整数得到。</p>
+<p>总分由上述成绩加总（每项成绩可能出现小数），四舍五入到整数得到。</p>
 
 
 
