--- a/courses/professional_courses/professional_fundamental_electric_courses/index.html
+++ b/courses/professional_courses/professional_fundamental_electric_courses/index.html
@@ -866,7 +866,7 @@
                   
 
 
-<h1 id="_1">专业基础课——电类课程</h1>
+<h1 id="_1">专业基础课——电工电子学类</h1>
 <h2 id="101c0010">（101C0010）电工电子学</h2>
 <ul>
 <li>考核方式：作业10%+测试15%+思政报告2%+mooc20%+mooc讨论题3%+考试50%   </li>
