--- a/courses/professional_courses/professional_fundamental_electric_courses/index.html
+++ b/courses/professional_courses/professional_fundamental_electric_courses/index.html
@@ -881,9 +881,8 @@
 <li>总体来说和大物实验这种差不多，不过实验报告是电子版的。上课的时候有不懂的多问老师，不然自己做不出来会很费时间。</li>
 <li>最好是记录一下检查元件有没有坏的方法，实验考试有概率碰上不好的元件。最后的实验考试前记得复习实验中涉及到的理论课内容，然后实验做仔细，看清要求。</li>
 </ul>
-<details class="success" open="open">
-<summary>回忆卷</summary>
-<p>23-24春夏zjp班电工电子学实验课程回忆卷<a href="https://www.cc98.org/topic/5911232">本人写的原帖链接</a></p>
+<details class="note">
+<summary>我的回忆卷<a href="https://www.cc98.org/topic/5911232">cc98贴链接</a></summary>
 </details>
 
 
