--- a/courses/professional_courses/professional_fundamental_mechanic_courses/index.html
+++ b/courses/professional_courses/professional_fundamental_mechanic_courses/index.html
@@ -894,9 +894,8 @@
 <li>如果实在学不会或者只想不挂，可以优先搞懂虚位移原理和达朗贝尔原理。</li>
 <li><a href="https://www.cc98.org/topic/5625557">学解的历年卷</a>有些没答案，还有的显然不是这门课的，只能参考。</li>
 </ul>
-<details class="success" open="open">
-<summary>回忆卷</summary>
-<p>2023秋冬学期理论力学（甲）回忆卷<a href="https://www.cc98.org/topic/5802414">本人写的原帖链接</a></p>
+<details class="note">
+<summary>我的回忆卷<a href="https://www.cc98.org/topic/5802414">cc98贴链接</a></summary>
 </details>
 <h2 id="261c0031">（261C0031）材料力学(乙)</h2>
 <ul>
